# Android_as_audiojni

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ybs/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ybs/myapplication/: FucUtil.java  JsonParser.java  MainActivity.java  SettingTextWatcher.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ybs/myapplication/: ExampleUnitTest.java
audioJnilib/: build.gradle
audioJnilib/src/androidTest/java/com/ybs/audiojnilib/: ExampleInstrumentedTest.java
audioJnilib/src/main/: AndroidManifest.xml
audioJnilib/src/main/cpp/: CMakeLists.txt  YbsAudioModule.cpp  YbsFrameQueue.c  YbsFrameQueue.h  YbsHalAlsa.c  YbsHalAlsa.h  YbsHalHid.c  YbsHalHid.h  YbsQueue.c  YbsQueue.h  com_ybs_audiojnilib_AudioModule.h
audioJnilib/src/main/cpp/include/: asoundlib.h
audioJnilib/src/main/cpp/ybs_mutl_ssp-master/: CMakeLists.txt
audioJnilib/src/main/cpp/ybs_mutl_ssp-master/dsplib/: CMakeLists.txt  aecm.c  aecm.h  hardware.h  noise_suppression.c  noise_suppression.h  output.c  overallContext.c  overallContext.h  parameter_init.c  parameters.c  parameters.h  sseTest.c  vad.c  vad.h  ybs_mutl_ssp.h
audioJnilib/src/main/cpp/ybs_mutl_ssp-master/dsplib/Geometry/: microphones.c  microphones.h
audioJnilib/src/main/cpp/ybs_mutl_ssp-master/dsplib/Localisation/: delays.c  delays.h  potentialSources.c  potentialSources.h  rij.c  rij.h
audioJnilib/src/main/cpp/ybs_mutl_ssp-master/dsplib/Output/: output.c  output.h
audioJnilib/src/main/cpp/ybs_mutl_ssp-master/dsplib/Postprocessing/: postprocessor.c  postprocessor.h
audioJnilib/src/main/cpp/ybs_mutl_ssp-master/dsplib/Preprocessing/: mcra.c  micst.c  preprocessor.c  preprocessor.h
audioJnilib/src/main/cpp/ybs_mutl_ssp-master/dsplib/Separation/: gss.c  gss.h  postfilter.c  postfilter.h  postfilteredSources.c  postfilteredSources.h  separatedSources.c  separatedSources.h
audioJnilib/src/main/cpp/ybs_mutl_ssp-master/dsplib/Tracking/: filter.c  mixture.c  trackedSources.c  trackedSources.h
audioJnilib/src/main/cpp/ybs_mutl_ssp-master/dsplib/Utilities/: dynamicMemory.c  dynamicMemory.h  fft.c  idList.c  idList.h  idManager.c  idManager.h  linearCorrelation.c  linearCorrelation.h  mathadvanced.h  matrix.c  matrix.h  transcendental.c  transcendental.h  window.c  window.h
audioJnilib/src/main/java/com/ybs/audiojnilib/: AudioInterface.java  AudioModule.java
audioJnilib/src/test/java/com/ybs/audiojnilib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
